# toolbox-mcp-server

./: README.md  pyproject.toml
src/toolbox_mcp_server/: server.py
src/toolbox_mcp_server/tools/: compare_image_with_box.py  compare_image_with_ssim.py
