[project]
name = "toolbox-mcp-server"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.6.0", "scikit-image", "imutils", "opencv-python"]
[[project.authors]]
name = "roy.yan"
email = "roy.yan@ccegroup.cn"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
toolbox-mcp-server = "toolbox_mcp_server:main"
